--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="root">
-        <span class="iconfont icon-guojiaguanliicon-"></span>
-        <canvas id="my-canvas" width="400" height="400">浏览器不支持canvas</canvas>
+        <!-- <span class="iconfont icon-guojiaguanliicon-"></span> -->
     </div>
 </body>
 </html>
